--- a/package.json
+++ b/package.json
@@ -69,27 +69,27 @@
         "properties": {
           "workspaceSidebar.actions": {
             "default": "Current Window",
-            "description": "%config.workspaceActions.description%",
+            "description": "%config.actions.description%",
             "enum": [
               "Current Window",
               "New Window"
             ],
             "enumDescriptions": [
-              "%config.workspaceActions.cur-window%",
-              "%config.workspaceActions.new-window%"
+              "%config.actions.cur-window%",
+              "%config.actions.new-window%"
             ],
             "scope": "application",
             "type": "string"
           },
           "workspaceSidebar.cleanLabels": {
             "default": true,
-            "description": "%config.workspaceCleanLabels.description%",
+            "description": "%config.cleanLabels.description%",
             "scope": "application",
             "type": "boolean"
           },
           "workspaceSidebar.depth": {
             "default": 0,
-            "description": "%config.workspaceFolderDepth.description%",
+            "description": "%config.depth.description%",
             "maximum": 25,
             "minimum": 0,
             "scope": "application",
@@ -97,13 +97,13 @@
           },
           "workspaceSidebar.showFileIcons": {
             "default": true,
-            "markdownDescription": "%config.workspaceShowFileIcons.description%",
+            "markdownDescription": "%config.showFileIcons.description%",
             "scope": "application",
             "type": "boolean"
           },
           "workspaceSidebar.showFileIconsConfig": {
             "default": {},
-            "markdownDescription": "%config.workspaceShowFileIconsConfig.description%",
+            "markdownDescription": "%config.showFileIconsConfig.description%",
             "scope": "application",
             "type": "object"
           }
@@ -114,9 +114,15 @@
         "properties": {
           "workspaceSidebar.folder": {
             "default": "",
-            "description": "%config.workspaceFolder.description%",
+            "description": "%config.folder.description%",
             "scope": "application",
             "type": "string"
+          },
+          "workspaceSidebar.folders": {
+            "default": [],
+            "description": "%config.folders.description%",
+            "scope": "application",
+            "type": "array"
           },
           "workspaceSidebar.folders.excluded": {
             "default": [
@@ -126,7 +132,7 @@
               "out",
               "public"
             ],
-            "description": "%config.workspaceSidebar.folders.excluded.description%",
+            "description": "%config.folders.excluded.description%",
             "scope": "application",
             "type": "array"
           }
@@ -137,16 +143,16 @@
         "properties": {
           "workspaceSidebar.showPaths": {
             "default": "As needed",
-            "description": "%config.workspaceShowPath.description%",
+            "description": "%config.showPaths.description%",
             "enum": [
               "Always",
               "As needed",
               "Never"
             ],
             "enumDescriptions": [
-              "%config.workspaceShowPath.always%",
-              "%config.workspaceShowPath.asneeded%",
-              "%config.workspaceShowPath.never%"
+              "%config.showPaths.always%",
+              "%config.showPaths.asneeded%",
+              "%config.showPaths.never%"
             ],
             "scope": "application",
             "type": "string"
@@ -158,7 +164,7 @@
         "properties": {
           "workspaceSidebar.searchMinimum": {
             "default": 15,
-            "description": "%config.workspaceSearchMinimum.description%",
+            "description": "%config.searchMinimum.description%",
             "maximum": 100,
             "minimum": 0,
             "scope": "application",
@@ -183,19 +189,19 @@
         "properties": {
           "workspaceSidebar.showFolderHierarchy": {
             "default": false,
-            "description": "%config.workspaceShowFolderHierarchy.description%",
+            "description": "%config.showFolderHierarchy.description%",
             "scope": "application",
             "type": "boolean"
           },
           "workspaceSidebar.showRootFolder": {
             "default": false,
-            "description": "Show root folder",
+            "description": "%config.showRootFolder.description%",
             "scope": "application",
             "type": "boolean"
           },
           "workspaceSidebar.condenseFileTree": {
             "default": true,
-            "description": "%config.workspaceCondenseFileTree.description%",
+            "description": "%config.condenseFileTree.description%",
             "scope": "application",
             "type": "boolean"
           }
