--- a/package.json
+++ b/package.json
@@ -89,13 +89,13 @@
           },
           "workspaceSidebar.showFileIcons": {
             "default": true,
-            "markdownDescription": "%config.showFileIcons.description%",
+            "markdownDescription": "%config.showFileIcons.markdownDescription%",
             "scope": "application",
             "type": "boolean"
           },
           "workspaceSidebar.showFileIconsConfig": {
             "default": {},
-            "markdownDescription": "%config.showFileIconsConfig.description%",
+            "markdownDescription": "%config.showFileIconsConfig.markdownDescription%",
             "scope": "application",
             "type": "object"
           }
@@ -119,7 +119,7 @@
           },
           "workspaceSidebar.rootFolders": {
             "default": [],
-            "description": "%config.rootFolders.description%",
+            "markdownDescription": "%config.rootFolders.markdownDescription%",
             "scope": "machine",
             "type": "array",
             "properties": {
@@ -137,7 +137,7 @@
               ".cache",
               ".git"
             ],
-            "description": "%config.folders.excluded.description%",
+            "markdownDescription": "%config.folders.excluded.markdownDescription%",
             "scope": "application",
             "type": "array"
           }
@@ -200,7 +200,7 @@
           },
           "workspaceSidebar.condenseFileTree": {
             "default": true,
-            "markdownDescription": "%config.condenseFileTree.description%",
+            "markdownDescription": "%config.condenseFileTree.markdownDescription%",
             "scope": "application",
             "type": "boolean"
           }
