--- a/package.json
+++ b/package.json
@@ -258,7 +258,7 @@
       "pre-commit": "lint-staged"
     }
   },
-  "icon": "./docs/images/icon/icon.png",
+  "icon": "docs/images/icon/icon.png",
   "keywords": [
     "workspaces"
   ],
