--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,43 +6,48 @@ on:
     types: [created]
   workflow_dispatch:
 jobs:
-  build:
+  vscemp:
+    name: VScode Marketplace
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-        
-      - name: Get Node Version
-        run: echo "##[set-output name=NVMRC;]$(cat .nvmrc)"
-        id: nvm
-        
+        uses: actions/checkout@v4
+
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: "${{ steps.nvm.outputs.NVMRC }}"
+          node-version: '${{ vars.NODE_VERSION }}'
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Install Dependencies
+        run: yarn
 
-      # - name: Install PNPM
-      #   uses: pnpm/action-setup@v2
-      #   with:
-      #     version: 7.29.0
+      - name: Install Vsce
+        run: npm i -g vsce
 
-      # - name: Setup Node
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: '16.15.1'
-      #     registry-url: 'https://registry.npmjs.org'
+      - name: Publish to VScode Marketplace
+        if: github.event_name != 'workflow_dispatch'
+        run: vsce publish -p ${{ secrets.VSCE_TOKEN }}
 
-      # - name: Install dependencies
-      #   run: pnpm install --frozen-lockfile
+  openvsix:
+    name: OpenVSIX Marketplace
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      # - name: Pre-package Test
-      #   if: github.event_name == 'workflow_dispatch'
-      #   run: pnpm prepublishOnly
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '${{ vars.NODE_VERSION }}'
+          registry-url: 'https://registry.npmjs.org'
 
-      # - name: Publish package to NPM
-      #   if: github.event_name != 'workflow_dispatch'
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      #   run: npm publish
+      - name: Install Dependencies
+        run: yarn
+
+      - name: Install Ovsx
+        run: npm i -g ovsx
+
+      - name: Publish to OpenVSIX Marketplace
+        if: github.event_name != 'workflow_dispatch'
+        run: ovsx publish -p ${{ secrets.OPENVSX_TOKEN }}
