--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,4 +50,4 @@ jobs:
 
       - name: Publish to OpenVSX Marketplace
         if: github.event_name != 'workflow_dispatch'
-        run: ovsx publish -p ${{ secrets.OPENVSX_TOKEN }}
+        run: ovsx publish --yarn -p ${{ secrets.OPENVSX_TOKEN }}
