--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vsc-workspace-sidebar",
-  "description": "An extension for VSCode that makes switching Workspaces easier.",
+  "description": "An extension for VSCode to switch Workspaces with ease.",
   "displayName": "Workspace Sidebar",
   "version": "2.0.3",
   "activationEvents": [
