--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
     types: [created]
   workflow_dispatch:
 jobs:
-  vscemp:
+  vscode:
     name: VSCode Marketplace
     runs-on: ubuntu-latest
     steps:
@@ -29,7 +29,7 @@ jobs:
         if: github.event_name != 'workflow_dispatch'
         run: vsce publish -p ${{ secrets.VSCE_TOKEN }}
 
-  openvsix:
+  openvsx:
     name: OpenVSX Marketplace
     runs-on: ubuntu-latest
     steps:
