--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vsc-workspace-sidebar",
   "description": "An extension for VSCode to switch Workspaces with ease.",
   "displayName": "Workspace Sidebar",
-  "version": "2.0.4",
+  "version": "2.1.0",
   "activationEvents": [
     "onStartupFinished"
   ],
@@ -304,6 +304,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@vscode/codicons": "^0.0.29",
     "@vscode/webview-ui-toolkit": "^1.2.2",
+    "uuid": "^10.0.0",
     "vscode-ext-localisation": "^1.1.0",
     "vscode-file-theme-processor": "^1.0.5"
   },
@@ -315,6 +316,7 @@
     "@types/mock-fs": "^4.13.4",
     "@types/node": "^13.11.0",
     "@types/sinon": "^9.0.9",
+    "@types/uuid": "^10.0.0",
     "@types/vscode": "^1.50.0",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
