--- a/package.json
+++ b/package.json
@@ -278,6 +278,10 @@
     "type": "git",
     "url": "https://github.com/sketchbuch/vsc-workspace-sidebar"
   },
+  "volta": {
+    "node": "18.15.0",
+    "yarn": "1.22.22"
+  },
   "scripts": {
     "build:dev": "parcel build ./src/extension.ts --target=dev",
     "build:release": "parcel build ./src/extension.ts --target=release",
